dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-server-service
spec:
  selector:
    app: notification-server
  ports:
    - protocol: TCP
      port: 30000
      targetPort: 30000
      nodePort: 30000
  type: NodePort
