dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-server-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: notification-server.app.fcgm.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notification-server-service
            port:
              number: 30000
